--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: 123456
       MYSQL_DATABASE: test
+    volumes:
+      - ./mysql-data:/var/lib/mysql
 
   app:
     restart: always
@@ -19,14 +21,15 @@ services:
       - MYSQL_PASSWORD=123456
     ports:
       - 8080:8080
+      - 1099:1099
     deploy:
       resources:
         limits:
-          cpus: 0.50
+          cpus: 1
           memory: 512M
         reservations:
-          cpus: 0.25
-          memory: 128M
+          cpus: 1
+          memory: 512M
     depends_on:
       - mysql
 
@@ -35,9 +38,32 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus-data:/prometheus
 
   grafana:
     image: grafana/grafana
     ports:
       - "3000:3000"
+    volumes:
+      - grafana-data:/var/lib/grafana
+
+volumes:
+  mysql-data:
+    driver: local
+    driver_opts:
+      o: bind
+      type: none
+      device: docker-volume/mysql
+  prometheus-data:
+    driver: local
+    driver_opts:
+      o: bind
+      type: none
+      device: docker-volume/prometheus
+  grafana-data:
+    driver: local
+    driver_opts:
+      o: bind
+      type: none
+      device: docker-volume/grafana
+
