--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=Troubleshotting-Performance
 server.port=8080
 
-debug=true
+debug=false
 
 # Datasource
+spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/test
@@ -28,5 +29,5 @@ management.endpoints.web.exposure.include=*
 
 #Logs
 logging.level.root=info
-logging.level.org.springframework.web=debug
+logging.level.org.springframework.web=info
 logging.level.org.hibernate=error
