--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3"
 services:
-
   mysql:
     image: mysql:8.0.23
+    user: "1000:1000"
     ports:
       - 3306:3306
     environment:
@@ -11,9 +11,33 @@ services:
     volumes:
       - ./docker-volumes/mysql:/var/lib/mysql
 
-  app:
+  # app:
+  #   restart: always
+  #   image: tentativafc/troubleshooting-performance:1.0.0-snapshot
+  #   environment:
+  #     - MYSQL_HOST=mysql
+  #     - MYSQL_PORT=3306
+  #     - MYSQL_USER=root
+  #     - MYSQL_PASSWORD=123456
+  #   ports:
+  #     - 8080:8080
+  #     - 1099:1099
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         cpus: 1
+  #         memory: 512M
+  #       reservations:
+  #         cpus: 1
+  #         memory: 512M
+  #   depends_on:
+  #     - mysql
+
+  server:
     restart: always
-    image: tentativafc/troubleshooting-performance:1.0.0-snapshot
+    build:
+      context: server
+      dockerfile: Dockerfile
     environment:
       - MYSQL_HOST=mysql
       - MYSQL_PORT=3306
@@ -21,6 +45,7 @@ services:
       - MYSQL_PASSWORD=123456
     ports:
       - 8080:8080
+      - 9090:9090
       - 1099:1099
     deploy:
       resources:
@@ -37,7 +62,7 @@ services:
     image: prom/prometheus
     user: "1000:1000"
     ports:
-      - "9090:9090"
+      - "9091:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
       - ./docker-volumes/prometheus:/prometheus
