--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.application.name=Troubleshotting-Performance
+spring.application.name=Troubleshooting-Performance
 server.port=8080
 
+server.tomcat.threads.max=5
+
 debug=false
+
+# gRPC
+grpc.server.port=9090
 
 # Datasource
 spring.jpa.open-in-view=false
@@ -10,6 +15,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/test
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:123456}
+
+spring.datasource.hikari.minimumIdle=2
+spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.poolName=SpringBootJPAHikariCP
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
 
 spring.flyway.enabled=true
 spring.flyway.baselineOnMigrate=true
@@ -25,7 +37,6 @@ spring.cache.jcache.config=classpath:ehcache.xml
 
 #Actuator
 management.endpoints.web.exposure.include=*
-
 
 #Logs
 logging.level.root=info
