--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,11 +2,11 @@ global:
   scrape_interval: 15s
   evaluation_interval: 15s
 scrape_configs:
-  - job_name: 'Scraper'
+  - job_name: 'Prometheus Server'
     scrape_interval: 5s
     static_configs:
       - targets: ['prometheus:9090'] # Prometheus Server
-  - job_name: 'server-app'
+  - job_name: 'SpringBoot Server App'
     scrape_interval: 5s
     metrics_path: '/actuator/prometheus'
     static_configs:
