--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Troubleshooting-Performance
+spring.application.name=Server
 server.port=8080
 
 server.tomcat.threads.max=5
