--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ troubleshooting-performance.iml
 **/.factorypath
 **/.project
 **/.settings/
+**/*.iml
 
 docker-volumes/mysql
 docker-volumes/prometheus/
