--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -44,3 +44,27 @@ management.endpoints.web.exposure.include=*
 logging.level.root=info
 logging.level.org.springframework.web=info
 logging.level.org.hibernate=error
+
+# Resilience
+management.health.circuitbreakers.enabled=true
+management.health.ratelimiters.enabled=true
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
+resilience4j.ratelimiter.configs.default.registerHealthIndicator=true
+# Circuit break
+resilience4j.circuitbreaker.instances.backend-server.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.backend-server.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.backend-server.slidingWindowType=TIME_BASED
+resilience4j.circuitbreaker.instances.backend-server.minimumNumberOfCalls=20
+resilience4j.circuitbreaker.instances.backend-server.waitDurationInOpenState=50s
+resilience4j.circuitbreaker.instances.backend-server.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.backend-server.eventConsumerBufferSize=10
+#resilience4j.circuitbreaker.instances.backend-server.recordFailurePredicate=io.github.robwin.exception.RecordFailurePredicate
+# Rate limit
+resilience4j.ratelimiter.instances.backend-server.limitForPeriod=10
+resilience4j.ratelimiter.instances.backend-server.limitRefreshPeriod=1s
+resilience4j.ratelimiter.instances.backend-server.timeoutDuration=0
+resilience4j.ratelimiter.instances.backend-server.registerHealthIndicator=true
+resilience4j.ratelimiter.instances.backend-server.eventConsumerBufferSize=100
+# Time limit
+resilience4j.timelimiter.instances.backend-server.timeoutDuration=2s
+resilience4j.timelimiter.instances.backend-server.cancelRunningFuture=true
